--- a/404.html
+++ b/404.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8" />
     <title>Redirecting...</title>
     <script>
-      var LINKS_BASE_PATH = "https://ln.yash.im/links/";
+      var LINKS_BASE_PATH = "https://0kb.org/0/";
       var PATH_SEGMENTS_TO_SKIP = 0;
 
       /**
-       * DO NOT TOUCH ANYTHING BELOW THIS COMMENT UNLESS YOU KNOW WHAT YOU ARE DOING
+       * DO NOT TOUCH ANYTHING BELOW THIS COMMENT UNLESS YOU KNOW we WHAT YOU ARE DOING
        */
       function isUrl(url) {
         // Regex from https://stackoverflow.com/a/3809435, with a modification to allow for TLDs of up to 24 characters
