--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>Redirecting...</title>
     <script>
-      var LINKS_BASE_PATH = "https://0kb.org/0/";
+      var LINKS_BASE_PATH = "https://0kb.org/0/links";
       var PATH_SEGMENTS_TO_SKIP = 0;
 
       /**
