--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
-<body>
-  <p>Super simple static url shortner, without user tracking, hosted on GitHub pages.</p>
-  <p>Source: <a href="https://github.com/yaim/url-shortner">https://github.com/yaim/url-shortner</a></p>
-</body>
+<head>
+    <meta http-equiv="refresh" content="0; url='https://0kb.org'">
+</head>
+<body></body>
 </html>
