--- a/index.html
+++ b/index.html
@@ -1,6 +1,44 @@
-<html>
+<html lang="en">
 <head>
-    <meta http-equiv="refresh" content="0; url='https://0kb.org'">
+    <meta charset="UTF-8">
+    <title>ż.co</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="https://placehold.co/16x16/000000/FFFFFF?text=ż" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"></link>
+    <style>
+        body {
+            background-color: #0d0d0d;
+            color: #ffffff;
+            font-family: 'Roboto', sans-serif;
+        }
+        pre {
+            color: red;
+        }
+    </style>
 </head>
-<body></body>
+<body>
+<pre>
+╔════════════════════════════════╗
+║  ██▓                           ║
+║  ▒▓▒    Where the problems     ║
+║   ░▒    you didn't have are    ║
+║  ░             solved.         ║
+║   ░             ż.co           ║
+║    ░                           ║
+║▒███████▒      ▄████▄   ▒█████  ║
+║▒ ▒ ▒ ▄▀░     ▒██▀ ▀█  ▒██▒  ██▒║
+║░ ▒ ▄▀▒░      ▒▓█    ▄ ▒██░  ██▒║
+║  ▄▀▒   ░     ▒▓▓▄ ▄██▒▒██   ██░║
+║▒███████▒ ██▓ ▒ ▓███▀ ░░ ████▓▒░║
+║░▒▒ ▓░▒░▒ ▒▓▒ ░ ░▒ ▒  ░░ ▒░▒░▒░ ║
+║░░▒ ▒ ░ ▒ ░▒    ░  ▒     ░ ▒ ▒░ ║
+║░ ░ ░ ░ ░ ░   ░        ░ ░ ░ ▒  ║
+║  ░ ░      ░  ░ ░          ░ ░  ║
+║░          ░  ░                 ║
+╚════════════════════════════════╝
+<a href="https://ż.co">ż.co</a>
+<a href="https://0kb.org">0kb.org</a>
+<a href="https://johnle.org">johnle.org</a>
+</pre>
+</body>
 </html>
