--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"></link>
     <style>
         body {
-            background-color: #0d0d0d;
-            color: #ffffff;
-            font-family: 'Roboto', sans-serif;
-        }
-        pre {
+            background-color: black;
             color: red;
+            font-family: monospace;
+            white-space: pre;
+            text-align: center;
+            margin-top: 50px;
         }
     </style>
 </head>
