--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 ║      ░ ░      ░  ░ ░          ░ ░      ║
 ║    ░          ░  ░                     ║
 ╚════════════════════════════════════════╝
-<a href="https://ż.co">ż.co</a>
+<a href="https://ż.co" style="text-decoration: none">ż.co</a>
 <a href="https://0kb.org">0kb.org</a>
 <a href="https://johnle.org">johnle.org</a>
 </pre>
