--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
 </head>
 <body>
 <pre>
+<a href="https://ż.co" style="text-decoration: none; color: white"">ż.co</a>
 ╔════════════════════════════════════════╗
-║      ███                               ║
-║      ▒▓▒        Where the problems     ║
-║       ░▒       you didn't have are     ║
-║      ░                solved.          ║
-║       ░                ż.co            ║
+║                                        ║
+║      ███        Where the problems     ║
+║      ▒▓▒       you didn't have are     ║
+║       ░▒              solved.          ║
+║      ░                 ż.co            ║
+║       ░                                ║
 ║        ░                               ║
 ║    ▒███████▒      ▄████▄   ▒█████      ║
 ║    ▒ ▒ ▒ ▄▀░     ▒██▀ ▀█  ▒██▒  ██▒    ║
@@ -35,10 +37,11 @@
 ║    ░ ░ ░ ░ ░ ░   ░        ░ ░ ░ ▒      ║
 ║      ░ ░      ░  ░ ░          ░ ░      ║
 ║    ░          ░  ░                     ║
+║                                        ║
 ╚════════════════════════════════════════╝
-<a href="https://ż.co" style="text-decoration: none">ż.co</a>
-<a href="https://0kb.org">0kb.org</a>
-<a href="https://johnle.org">johnle.org</a>
+<a href="https://ż.co" style="text-decoration: none; color: white"">ż.co</a>
+<a href="https://0kb.org" style="text-decoration: none; color: white">0kb.org</a>
+<a href="https://johnle.org" style="text-decoration: none; color: white">johnle.org</a>
 </pre>
 </body>
 </html>
