--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 <pre>
-<a href="https://ż.co" style="text-decoration: none; color: white"">ż.co</a>
+<a href="https://ż.co" style="text-decoration: none; color: red"">ż.co</a>
 ╔════════════════════════════════════════╗
 ║                                        ║
 ║      ███        Where the problems     ║
