--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
 </head>
 <body>
 <pre>
-<a href="https://ż.co" style="text-decoration: none; color: red">ż.co</a>
 ╔════════════════════════════════════════╗
+║                  <a href="https://ż.co" style="text-decoration: none; color: red">z.co</a>                  ║
+╠════════════════════════════════════════╣
 ║                                        ║
 ║      ███        Where the problems     ║
 ║      ▒▓▒       you didn't have are     ║
@@ -37,10 +38,12 @@
 ║      ░ ░      ░  ░ ░          ░ ░      ║
 ║    ░          ░  ░                     ║
 ║                                        ║
+╠════════════════════════════════════════╣
+║                  <a href="https://ż.co" style="text-decoration: none; color: white"">ż.co</a>                  ║
+║                 <a href="https://0kb.org" style="text-decoration: none; color: white">0kb.org</a>                ║
+║               <a href="https://johnle.org" style="text-decoration: none; color: white">johnle.org</a>               ║
 ╚════════════════════════════════════════╝
-<a href="https://ż.co" style="text-decoration: none; color: white"">ż.co</a>
-<a href="https://0kb.org" style="text-decoration: none; color: white">0kb.org</a>
-<a href="https://johnle.org" style="text-decoration: none; color: white">johnle.org</a>
+
 </pre>
 </body>
 </html>
