--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 <pre>
 ╔════════════════════════════════════════╗
-║                  <a href="https://ż.co" style="text-decoration: none; color: red">z.co</a>                  ║
+║                  <a href="https://ż.co" style="text-decoration: none; color: red">ż.co</a>                  ║
 ╠════════════════════════════════════════╣
 ║                                        ║
 ║      ███        Where the problems     ║
