--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
             white-space: pre;
             text-align: center;
             margin-top: 50px;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
         }
     </style>
 </head>
